# zotero-google-scholar

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: create_or_update_baseline_secrets.sh  setup_dev_environment.sh  setup_git_aliases.sh
src/zotero_google_scholar/: cli.py  core.py
